force-app/main/default/objects/Report_Custom__c/Report_Custom__c.object-meta.xml
<CustomObject>
    <label>Report Custom</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Report Custom Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Custom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>