force-app/main/default/objects/Report_Custom__c/fields/Batch_Class__c.field-meta.xml
<CustomField>
    <fullName>Batch_Class__c</fullName>
    <description>报表执行batch class名称</description>
    <label>Batch Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>