force-app/main/default/objects/Report_Custom__c/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <description>No:显示 Yes:不显示</description>
    <formula>ISPICKVAL( Report_Status__c , &apos;Updating&apos;)  ||  ISPICKVAL( Report_Status__c , &apos;No need to update&apos;)</formula>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>