force-app/main/default/objects/Report_Custom__c/fields/Parameter__c.field-meta.xml
<CustomField>
    <fullName>Parameter__c</fullName>
    <description>参数 类型String，多个参数用“;”隔开</description>
    <inlineHelpText>参数 类型String，多个参数用“;”隔开</inlineHelpText>
    <label>Parameter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>