force-app/main/default/objects/Report_Custom__c/fields/Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Report_Status__c</fullName>
    <label>Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not updated</fullName>
                <default>true</default>
                <label>Not updated</label>
            </value>
            <value>
                <fullName>Updating</fullName>
            </value>
            <value>
                <fullName>Update complete</fullName>
            </value>
            <value>
                <fullName>No need to update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>