force-app/main/default/objects/Report_Custom__c/fields/Report_Url__c.field-meta.xml
<CustomField>
    <fullName>Report_Url__c</fullName>
    <label>Report Url</label>
    <type>Url</type>
</CustomField>