force-app/main/default/objects/Report_Custom__c/fields/Text_Class__c.field-meta.xml
<CustomField>
    <fullName>Text_Class__c</fullName>
    <formula>CASE( Report_Status__c , 
&apos;Updating&apos;, &apos;slds-text-color_error&apos;, 
&apos;Not updated&apos;, &apos;slds-text-color_default&apos;,
&apos;slds-text-color_success&apos;)</formula>
    <label>Text Class</label>
    <type>Text</type>
</CustomField>